<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".CalculatorActivity">

    <Button
        android:id="@+id/buttonClear"
        style="@style/buttonCalculator"
        android:text="@string/c"
        android:layout_marginBottom="8dp"
        android:textColor="@color/green"
        android:onClick="Clear"
        android:background="@drawable/calculator_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button0"/>
    <Button
        android:id="@+id/button0"
        style="@style/buttonCalculator"
        android:text="@string/_0"
        android:layout_marginBottom="8dp"
        android:onClick="numberClick"
        android:background="@drawable/calculator_buttons"
        app:layout_constraintBottom_toBottomOf="@id/buttonClear"
        app:layout_constraintStart_toEndOf="@id/buttonClear"
        app:layout_constraintTop_toTopOf="@id/buttonClear"
        app:layout_constraintEnd_toStartOf="@id/buttonDot"/>
    <Button
        android:id="@+id/buttonDot"
        style="@style/buttonCalculator"
        android:text="@string/dot"
        android:layout_marginBottom="8dp"
        android:background="@drawable/calculator_buttons"
        android:onClick="dotClick"
        app:layout_constraintBottom_toBottomOf="@id/button0"
        app:layout_constraintStart_toEndOf="@id/button0"
        app:layout_constraintTop_toTopOf="@id/button0"
        app:layout_constraintEnd_toStartOf="@id/buttonCalculate"/>
    <Button
        android:id="@+id/buttonCalculate"
        style="@style/buttonCalculator"
        android:text="@string/calculate"
        android:layout_marginBottom="8dp"
        android:background="@drawable/calculate_button"
        android:textColor="@color/oxford_blue"
        android:onClick="showResult"
        app:layout_constraintBottom_toBottomOf="@id/buttonDot"
        app:layout_constraintStart_toEndOf="@id/buttonDot"
        app:layout_constraintTop_toTopOf="@id/buttonDot"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button1"
        style="@style/buttonCalculator"
        android:text="@string/_1"
        android:background="@drawable/calculator_buttons"
        android:layout_marginBottom="8dp"
        android:onClick="numberClick"
        app:layout_constraintBottom_toTopOf="@id/buttonClear"
        app:layout_constraintStart_toStartOf="@id/buttonClear"
        app:layout_constraintEnd_toEndOf="@id/buttonClear"/>
    <Button
        android:id="@+id/button2"
        style="@style/buttonCalculator"
        android:text="@string/_2"
        android:background="@drawable/calculator_buttons"
        android:layout_marginBottom="8dp"
        android:onClick="numberClick"
        app:layout_constraintTop_toTopOf="@id/button1"
        app:layout_constraintBottom_toBottomOf="@id/button1"
        app:layout_constraintStart_toEndOf="@id/button1"
        app:layout_constraintEnd_toStartOf="@id/button3"/>
    <Button
        android:id="@+id/button3"
        style="@style/buttonCalculator"
        android:text="@string/_3"
        android:background="@drawable/calculator_buttons"
        android:layout_marginBottom="8dp"
        android:onClick="numberClick"
        app:layout_constraintTop_toTopOf="@id/button2"
        app:layout_constraintBottom_toBottomOf="@id/button2"
        app:layout_constraintStart_toEndOf="@id/button2"
        app:layout_constraintEnd_toStartOf="@id/buttonPlus"/>
    <Button
        android:id="@+id/buttonPlus"
        style="@style/buttonCalculator"
        android:text="@string/plus"
        android:background="@drawable/calculator_buttons"
        android:layout_marginBottom="8dp"
        android:textColor="@color/green"
        android:onClick="operatorClick"
        app:layout_constraintTop_toTopOf="@id/button3"
        app:layout_constraintBottom_toBottomOf="@id/button3"
        app:layout_constraintStart_toEndOf="@id/button3"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button4"
        style="@style/buttonCalculator"
        android:text="@string/_4"
        android:background="@drawable/calculator_buttons"
        android:layout_marginBottom="8dp"
        android:onClick="numberClick"
        app:layout_constraintBottom_toTopOf="@id/button1"
        app:layout_constraintStart_toStartOf="@id/button1"
        app:layout_constraintEnd_toEndOf="@id/button1"/>
    <Button
        android:id="@+id/button5"
        style="@style/buttonCalculator"
        android:text="@string/_5"
        android:background="@drawable/calculator_buttons"
        android:layout_marginBottom="8dp"
        android:onClick="numberClick"
        app:layout_constraintTop_toTopOf="@id/button4"
        app:layout_constraintBottom_toBottomOf="@id/button4"
        app:layout_constraintStart_toEndOf="@id/button4"
        app:layout_constraintEnd_toStartOf="@id/button6"/>
    <Button
        android:id="@+id/button6"
        style="@style/buttonCalculator"
        android:text="@string/_6"
        android:background="@drawable/calculator_buttons"
        android:layout_marginBottom="8dp"
        android:onClick="numberClick"
        app:layout_constraintTop_toTopOf="@id/button5"
        app:layout_constraintBottom_toBottomOf="@id/button5"
        app:layout_constraintStart_toEndOf="@id/button5"
        app:layout_constraintEnd_toStartOf="@id/buttonSub"/>
    <Button
        android:id="@+id/buttonSub"
        style="@style/buttonCalculator"
        android:text="@string/sub"
        android:background="@drawable/calculator_buttons"
        android:layout_marginBottom="8dp"
        android:textColor="@color/green"
        android:onClick="operatorClick"
        app:layout_constraintTop_toTopOf="@id/button6"
        app:layout_constraintBottom_toBottomOf="@id/button6"
        app:layout_constraintStart_toEndOf="@id/button6"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button7"
        style="@style/buttonCalculator"
        android:text="@string/_7"
        android:background="@drawable/calculator_buttons"
        android:layout_marginBottom="8dp"
        android:onClick="numberClick"
        app:layout_constraintBottom_toTopOf="@id/button4"
        app:layout_constraintStart_toStartOf="@id/button4"
        app:layout_constraintEnd_toEndOf="@id/button4"/>
    <Button
        android:id="@+id/button8"
        style="@style/buttonCalculator"
        android:text="@string/_8"
        android:background="@drawable/calculator_buttons"
        android:layout_marginBottom="8dp"
        android:onClick="numberClick"
        app:layout_constraintTop_toTopOf="@id/button7"
        app:layout_constraintBottom_toBottomOf="@id/button7"
        app:layout_constraintStart_toEndOf="@id/button7"
        app:layout_constraintEnd_toStartOf="@id/button9"/>
    <Button
        android:id="@+id/button9"
        style="@style/buttonCalculator"
        android:text="@string/_9"
        android:background="@drawable/calculator_buttons"
        android:layout_marginBottom="8dp"
        android:onClick="numberClick"
        app:layout_constraintTop_toTopOf="@id/button8"
        app:layout_constraintBottom_toBottomOf="@id/button8"
        app:layout_constraintStart_toEndOf="@id/button8"
        app:layout_constraintEnd_toStartOf="@id/buttonMult"/>
    <Button
        android:id="@+id/buttonMult"
        style="@style/buttonCalculator"
        android:text="@string/multiple"
        android:background="@drawable/calculator_buttons"
        android:layout_marginBottom="8dp"
        android:textColor="@color/green"
        android:onClick="operatorClick"
        app:layout_constraintTop_toTopOf="@id/button9"
        app:layout_constraintBottom_toBottomOf="@id/button9"
        app:layout_constraintStart_toEndOf="@id/button9"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/buttonConverter"
        style="@style/buttonCalculator"
        android:layout_width="0dp"
        android:padding="8dp"
        android:text="Currency"
        android:textColor="@color/green"
        android:onClick="changeActivity"
        android:background="@drawable/calculator_buttons"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/button7"
        app:layout_constraintStart_toStartOf="@id/button7"
        app:layout_constraintEnd_toEndOf="@id/button8"/>
    <Button
        android:id="@+id/buttonPercentage"
        style="@style/buttonCalculator"
        android:text="@string/percentage"
        android:background="@drawable/calculator_buttons"
        android:layout_marginBottom="8dp"
        android:textColor="@color/green"
        android:onClick="onModuloClick"
        app:layout_constraintTop_toTopOf="@id/buttonConverter"
        app:layout_constraintBottom_toBottomOf="@id/buttonConverter"
        app:layout_constraintStart_toEndOf="@id/buttonConverter"
        app:layout_constraintEnd_toStartOf="@id/buttonDiv"/>
    <Button
        android:id="@+id/buttonDiv"
        style="@style/buttonCalculator"
        android:text="@string/div"
        android:background="@drawable/calculator_buttons"
        android:layout_marginBottom="8dp"
        android:textColor="@color/green"
        android:onClick="operatorClick"
        app:layout_constraintTop_toTopOf="@id/buttonPercentage"
        app:layout_constraintBottom_toBottomOf="@id/buttonPercentage"
        app:layout_constraintStart_toEndOf="@id/buttonPercentage"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#79A6A5A5"
        app:layout_constraintBottom_toTopOf="@id/buttonConverter"
        app:layout_constraintStart_toStartOf="@id/buttonConverter"
        app:layout_constraintEnd_toEndOf="@id/buttonDiv"
        android:layout_marginBottom="32dp"/>

    <TextView
        android:id="@+id/resultText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintEnd_toEndOf="@id/view"
        android:gravity="end"
        android:text="= 0"
        android:textSize="28sp"
        android:visibility="gone"
        android:textColor="#D2A6A5A5" />

    <TextView
        android:id="@+id/displayText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/resultText"
        app:layout_constraintEnd_toEndOf="@id/resultText"
        android:gravity="end"
        android:textSize="36sp"
        android:scrollbars="vertical"
        android:text="0"
        android:textColor="#D2A6A5A5"/>


</androidx.constraintlayout.widget.ConstraintLayout>